--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,11 @@ ul
 }
 .btn:hover
 {
-    transform: scale(1.05);
+    padding: 25px 50px;
+}
+.shadow-dark
+{
+    box-shadow:0 0 20px rgba(48,46,77,0.15);
 }
 
 /* aside */
@@ -363,10 +367,171 @@ ul
     max-width: 60%;
     margin-top: 40px;
 }
-.about .about-content .skills
+.about .about-content .personal-info .info-item
+{
+    flex: 0 0 50%;
+    max-width: 50%;
+
+}
+.about .about-content .personal-info .info-item p
+{
+    font-weight: 600 ;
+    padding: 10px 0;
+    font-size: 16px;
+    color: var(--text-black-900);
+    border-bottom: 1px solid var(--bg-black-50);
+}
+.about .about-content .personal-info .info-item p span
+{
+    font-weight: 400;
+    color: var(--text-black-700);
+    margin-left: 4px;
+    display: inline-block;
+
+}
+.about .about-content .personal-info .button
+{
+    margin-top: 30px;
+}
+.about .about-content .personal-info .button .btn
+{
+    margin-right: 15px;
+    margin-top: 10px;
+}
+.about .about-content .skill
 {
     flex: 0 0 40%;
     max-width: 40%;
     margin-top: 40px;
 
+}
+.about .about-content .skill .skill-item    
+{
+    flex: 0 0 100%;
+    max-width: 100%;
+
+}
+.about .about-content .skill .skill-item h5
+{
+    line-height: 40px;
+    font-weight: 600;
+    font-size: 16px;
+    color: var(--text-black-900);
+    text-transform: capitalize;
+}
+.about .about-content .skill .skill-item .progress
+{
+    background-color: var(--bg-black-50);
+    height: 7px;
+    border-radius: 4px;
+    width: 100%;
+    position: relative;
+}
+.about .about-content .skill .skill-item
+{
+    margin-bottom: 25px;
+}
+.about .about-content .skill .skill-item .progress .progress-in 
+{
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    border-radius: 4px;
+    background-color: var(--skin-color);
+}
+.about .about-content .skill .skill-item .skill-percent
+{
+    position: absolute;
+    right: 0;
+    color: var(--text-black-900);
+    top:-40px;
+    font-weight: 400;
+    line-height: 40px;
+}
+.about .about-content .education,
+.about .about-content .experience  
+{
+    flex: 0 0 50%;
+    max-width: 50%;
+    margin-top: 30px;
+}
+.about .about-content h3.title
+{
+    font-size: 24px;
+    margin-bottom: 30px;
+    font-weight: 700;
+    color: var(--text-black-900);
+}
+.about .about-content .timline-box
+{
+    flex: 0 0 100%;
+    max-width: 100%;
+
+}
+.about .about-content .timline
+{
+    background-color: var(--bg-black-100);
+    padding: 30px 15px;
+    border: 1px solid var(--bg-black-50);
+    border-radius: 10px;
+    width: 100%;
+    position: relative;
+
+}
+.about .about-content .timline .timline-item   
+{
+    position: relative;
+    .about .about-content .timline .timline-item:last-child
+    padding-bottom: 50px;
+}
+.about .about-content .timline .timline-item:last-child
+{
+    padding-bottom: 0;
+}
+.about .about-content .timline .timline-item::before
+{
+    content: '';
+    width: 1px;
+    position: absolute;
+    height: 100%;
+    left: 7px;
+    top: 0;
+    background-color: var(--skin-color);
+}
+.about .about-content .timline .circle-dot
+{
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 15px;
+    width: 15px;
+    border-radius: 50%;
+    background-color: var(--skin-color);
+}
+.about .about-content .timline .timline-date
+{
+    font-weight: 400;
+    font-size: 14px;
+    margin-bottom: 12px;
+    color: var(--text-black-700);
+}
+.about .about-content .timline .timline-date .fa 
+{
+    margin-right: 5px;
+}
+.about .about-content .timline .timline-title
+{
+    font-weight: 700;
+    font-size: 18px;
+    margin-bottom: 15px;
+    text-transform: capitalize;
+    color: var(--bg-black-900);
+}
+.about .about-content .timline .timline-text
+{
+    line-height: 25px;
+    font-size: 16px;
+    text-align: justify;
+    color: var(--text-black-700);
 }
